[gd_scene load_steps=15 format=3 uid="uid://bjepaf3egj6k8"]

[ext_resource type="Script" uid="uid://v5ihecwkqlf3" path="res://scripts/character/character.gd" id="1_n3tfo"]
[ext_resource type="Texture2D" uid="uid://dc0utspdugm4v" path="res://assets/sprites/character/body_1.svg" id="2_mebj4"]
[ext_resource type="Texture2D" uid="uid://evskud5a6ke2" path="res://assets/sprites/character/body_2.svg" id="3_uy71x"]
[ext_resource type="Texture2D" uid="uid://dbilbqrryg3so" path="res://assets/sprites/character/body_3.svg" id="4_lslr1"]
[ext_resource type="Texture2D" uid="uid://duq3y5kvj8rcj" path="res://assets/sprites/character/body_4.svg" id="5_fxkjn"]
[ext_resource type="Texture2D" uid="uid://dmpluj8heeow0" path="res://assets/sprites/character/hand_1.svg" id="6_jdted"]
[ext_resource type="Texture2D" uid="uid://c4vsubal7bg50" path="res://assets/sprites/character/hand_2.svg" id="7_v3rax"]
[ext_resource type="Texture2D" uid="uid://dlljp5sv2opx" path="res://assets/sprites/character/hand_3.svg" id="8_j0cfc"]
[ext_resource type="Texture2D" uid="uid://dfj2a5sq7ywmo" path="res://assets/sprites/character/hand_4.svg" id="9_3kc22"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q52vl"]
radius = 40.0

[sub_resource type="SkeletonModification2DCCDIK" id="SkeletonModification2DCCDIK_q52vl"]
target_nodepath = NodePath("../../LeftHand")
tip_nodepath = NodePath("Spine/LeftShoulder/LeftElbow/LeftHand")
ccdik_data_chain_length = 2
joint_data/0/bone_index = 2
joint_data/0/bone2d_node = NodePath("Spine/LeftShoulder/LeftElbow")
joint_data/0/rotate_from_joint = false
joint_data/0/enable_constraint = true
joint_data/0/constraint_angle_min = 50.0
joint_data/0/constraint_angle_max = 250.0
joint_data/0/constraint_angle_invert = true
joint_data/0/constraint_in_localspace = true
joint_data/0/editor_draw_gizmo = true
joint_data/1/bone_index = 1
joint_data/1/bone2d_node = NodePath("Spine/LeftShoulder")
joint_data/1/rotate_from_joint = false
joint_data/1/enable_constraint = true
joint_data/1/constraint_angle_min = 150.0
joint_data/1/constraint_angle_max = 270.0
joint_data/1/constraint_angle_invert = true
joint_data/1/constraint_in_localspace = true
joint_data/1/editor_draw_gizmo = true

[sub_resource type="SkeletonModification2DCCDIK" id="SkeletonModification2DCCDIK_l884r"]
target_nodepath = NodePath("../../RightHand")
tip_nodepath = NodePath("Spine/RightShoulder/RightElbow/RightHand")
ccdik_data_chain_length = 2
joint_data/0/bone_index = 4
joint_data/0/bone2d_node = NodePath("Spine/RightShoulder/RightElbow")
joint_data/0/rotate_from_joint = false
joint_data/0/enable_constraint = true
joint_data/0/constraint_angle_min = -50.0
joint_data/0/constraint_angle_max = -250.0
joint_data/0/constraint_angle_invert = true
joint_data/0/constraint_in_localspace = true
joint_data/0/editor_draw_gizmo = true
joint_data/1/bone_index = 3
joint_data/1/bone2d_node = NodePath("Spine/RightShoulder")
joint_data/1/rotate_from_joint = false
joint_data/1/enable_constraint = true
joint_data/1/constraint_angle_min = -150.0
joint_data/1/constraint_angle_max = -270.0
joint_data/1/constraint_angle_invert = true
joint_data/1/constraint_in_localspace = true
joint_data/1/editor_draw_gizmo = true

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_0rlhq"]
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DCCDIK_q52vl")
modifications/1 = SubResource("SkeletonModification2DCCDIK_l884r")

[sub_resource type="CircleShape2D" id="CircleShape2D_l884r"]
radius = 15.0

[node name="Character" type="Node"]
script = ExtResource("1_n3tfo")
bodies = Array[Texture2D]([ExtResource("2_mebj4"), ExtResource("3_uy71x"), ExtResource("4_lslr1"), ExtResource("5_fxkjn")])
hands = Array[Texture2D]([ExtResource("6_jdted"), ExtResource("7_v3rax"), ExtResource("8_j0cfc"), ExtResource("9_3kc22")])

[node name="Body" type="CharacterBody2D" parent="."]
z_index = 3
motion_mode = 1

[node name="BodyShape" type="CollisionShape2D" parent="Body"]
shape = SubResource("CircleShape2D_q52vl")

[node name="BodySprite" type="Sprite2D" parent="Body/BodyShape"]
show_behind_parent = true
texture = ExtResource("2_mebj4")

[node name="Skeleton" type="Skeleton2D" parent="Body"]
modification_stack = SubResource("SkeletonModificationStack2D_0rlhq")

[node name="Spine" type="Bone2D" parent="Body/Skeleton"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="LeftShoulder" type="Bone2D" parent="Body/Skeleton/Spine"]
position = Vector2(-40, 0)
rest = Transform2D(1, 0, 0, 1, -40, 0)
auto_calculate_length_and_angle = false
length = 41.2311
bone_angle = -165.964

[node name="LeftElbow" type="Bone2D" parent="Body/Skeleton/Spine/LeftShoulder"]
position = Vector2(-40, -10)
rest = Transform2D(1, 0, 0, 1, -40, -10)
auto_calculate_length_and_angle = false
length = 50.0
bone_angle = -53.13

[node name="LeftHand" type="RemoteTransform2D" parent="Body/Skeleton/Spine/LeftShoulder/LeftElbow"]
position = Vector2(30, -40)
remote_path = NodePath("../../../../../../LeftHand")
update_scale = false
metadata/_edit_lock_ = true

[node name="RightShoulder" type="Bone2D" parent="Body/Skeleton/Spine"]
position = Vector2(40, 0)
rest = Transform2D(1, 0, 0, 1, 40, 0)
auto_calculate_length_and_angle = false
length = 41.2311
bone_angle = -14.0362

[node name="RightElbow" type="Bone2D" parent="Body/Skeleton/Spine/RightShoulder"]
position = Vector2(40, -10)
rest = Transform2D(1, 1.75635e-06, -1.75635e-06, 1, 40, -10)
auto_calculate_length_and_angle = false
length = 50.0
bone_angle = -126.87

[node name="RightHand" type="RemoteTransform2D" parent="Body/Skeleton/Spine/RightShoulder/RightElbow"]
position = Vector2(-30, -40)
remote_path = NodePath("../../../../../../RightHand")
update_scale = false
metadata/_edit_lock_ = true

[node name="LeftHandIK" type="Node2D" parent="Body"]
position = Vector2(-50, -50)

[node name="RightHandIK" type="Node2D" parent="Body"]
position = Vector2(50, -50)

[node name="LeftHand" type="CharacterBody2D" parent="."]
z_index = 3
position = Vector2(-50, -50)
motion_mode = 1
metadata/_edit_lock_ = true

[node name="LeftHandShape" type="CollisionShape2D" parent="LeftHand"]
shape = SubResource("CircleShape2D_l884r")
metadata/_edit_lock_ = true

[node name="LeftHandSprite" type="Sprite2D" parent="LeftHand/LeftHandShape"]
show_behind_parent = true
texture = ExtResource("6_jdted")
metadata/_edit_lock_ = true

[node name="RightHand" type="CharacterBody2D" parent="."]
z_index = 3
position = Vector2(50, -50)
motion_mode = 1
metadata/_edit_lock_ = true

[node name="RightHandShape" type="CollisionShape2D" parent="RightHand"]
shape = SubResource("CircleShape2D_l884r")
metadata/_edit_lock_ = true

[node name="RightHandSprite" type="Sprite2D" parent="RightHand/RightHandShape"]
show_behind_parent = true
texture = ExtResource("6_jdted")
flip_h = true
metadata/_edit_lock_ = true
